# cosmos-reason-trie-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: prompts.yaml  report_schema.json
data/: README.md
docs/metrics/: vqa_metrics.json
docs/reports/: 000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  000040.json  (+1460 more)
scripts/: 00_setup_env.sh  40_generate_report.sh  50_run_demo_ui.sh
src/: cosmos_reason_2_inference.py
src/trie_ai/: atire.py  atire_example.py  cli.py  eval_vqa_ccd.py  prompts.py  reason2_runner.py  report.py  video_io.py
src/trie_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
