[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trie-ai"
version = "0.1.0"
description = "Traffic Incident Evidence Agent (CLI + Streamlit) using Cosmos Reason 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
trie = "trie_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
